tests/typechecker/should_pass/timed_sections.csp
f(_) = 1

channel a, tock

Timed (f) {
    P = a -> STOP        
}
