tests/typechecker/should_fail/proc_tests3.csp
b = length(seq({STOP, STOP})) == 1